--- a/vessel.css
+++ b/vessel.css
@@ -25,7 +25,7 @@ body:after {
 	left: 0;
 	right: 0;
 	bottom: 0;
-	background: rgba(255, 255, 255, 0.75);
+	background: rgba(0, 0, 0, 0.75);
 	z-index: 2;
 }
 
@@ -35,4 +35,9 @@ body:after {
 	color: #fff;
 	text-align: center;
 	padding: 50px;
+}
+
+table, th, tbody {
+	color: #fff;
+	border-color: #fff;
 }
