--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 #map-wrapper {
-  background-color: red;
+  background-color: rgb(150, 200, 212);
   width: 800px;
   height: 400px;
   margin: auto;
