--- a/vessel.css
+++ b/vessel.css
@@ -23,9 +23,10 @@ body {
 .inner {
 	position: relative;
 	z-index: 3;
-	color: rgb(15, 15, 15);
+	color: rgb(11, 11, 11);
 	text-align: center;
 	padding: 50px;
+
 }
 
 table, th, tbody {
@@ -34,5 +35,14 @@ table, th, tbody {
 }
 
 ul {
+    opacity: 0.5;
+}
+
+h1 {
+    font-weight: 400 ;
+    font-family: cursive;
+}
+
+table {
     opacity: 0.5;
 }
