--- a/vessel.css
+++ b/vessel.css
@@ -32,10 +32,11 @@ body {
 table, th, tbody {
 	color: rgb(12, 12, 12);
 	border-color: rgb(7, 7, 7);
+    background-color: rgb(255, 255, 255);
 }
 
 ul {
-    opacity: 0.5;
+    opacity: 0.9;
 }
 
 h1 {
@@ -44,5 +45,5 @@ h1 {
 }
 
 table {
-    opacity: 0.5;
+    opacity: 0.9;
 }
